--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -6,7 +6,7 @@ ul {
   position: relative;
   background: #fff;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10px 20px;
   border-radius: 50px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -33,8 +33,7 @@ ul li a {
   border-radius: 50%;
 }
 
-ul li.pageNumber:hover a,
-ul li.pageNumber.active a {
+ul li.pageNumber:hover a {
   background: #383838;
   color: #fff;
 }
@@ -49,4 +48,8 @@ ul li:last-child {
   margin-left: 30px;
   font-weight: 700;
   font-size: 20px;
+}
+.active{
+  background: #383838;
+  color: white;
 }
