--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,40 +1,46 @@
 .styledTable {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  }
-  .styledTable thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-  }
-  .styledTable th,
-  .styledTable td {
-      padding: 12px 38px;
-  }
-  .styledTable tbody tr {
-    border-bottom: 1px solid #dddddd;
-  }
-  
-  .styledTable tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-  }
-  
-  .styledTable tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-  }
-  .styledTable tbody tr.activeRow {
-    font-weight: bold;
-    color: #009879;
-  }
-  .usersRow{
-    cursor: pointer;
-  }
-  .thContainer{
-    position: relative;
-    cursor: pointer;
-    padding: 14px 30px;
-  }
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styledTable thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+.styledTable th,
+.styledTable td {
+  padding: 12px 38px;
+}
+.styledTable tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styledTable tbody tr:nth-of-type(even) {
+  transition: 0.4s;
+  background-color: #f3f3f3;
+}
+.styledTable tbody tr:nth-of-type(odd) {
+  background-color: white;
+}
+.styledTable tbody tr:hover {
+  cursor: pointer;
+  transition: 0.4s;
+  background-color: rgba(192, 192, 192, 0.479);
+}
+.styledTable tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+.thContainer {
+  position: relative;
+  cursor: pointer;
+  padding: 14px 30px;
+}
+
+.styledTable tbody tr.active{
+  background-color: silver;
+}
